config projects to x64

--- a/src/Engine/Imp/Graphics/Desktop/Fusee.Engine.Imp.Graphics.Desktop.csproj
+++ b/src/Engine/Imp/Graphics/Desktop/Fusee.Engine.Imp.Graphics.Desktop.csproj
@@ -9,6 +9,8 @@
 		<Description>Fusee Engine Imp Graphics Desktop</Description>
 
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
