--- a/Examples/Complete/PointCloudPotree2/Core/Fusee.Examples.PointCloudPotree2.Core.csproj
+++ b/Examples/Complete/PointCloudPotree2/Core/Fusee.Examples.PointCloudPotree2.Core.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<OutputPath>$(BaseOutputPath)\Examples\PointCloudPotree2\Core\</OutputPath>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
