--- a/src/Base/Common/Fusee.Base.Common.csproj
+++ b/src/Base/Common/Fusee.Base.Common.csproj
@@ -6,6 +6,7 @@
 		
 		<IsPackable>true</IsPackable>
 		<Description>Fusee Base Common</Description>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
