--- a/src/Base/Imp/Desktop/Fusee.Base.Imp.Desktop.csproj
+++ b/src/Base/Imp/Desktop/Fusee.Base.Imp.Desktop.csproj
@@ -7,6 +7,7 @@
 		
 		<IsPackable>true</IsPackable>
 		<Description>Fusee Base Imp Desktop</Description>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
