--- a/src/Engine/Common/Fusee.Engine.Common.csproj
+++ b/src/Engine/Common/Fusee.Engine.Common.csproj
@@ -6,6 +6,7 @@
 
 		<IsPackable>true</IsPackable>
 		<Description>Fusee Engine Common</Description>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
