--- a/src/Engine/Core/Fusee.Engine.Core.csproj
+++ b/src/Engine/Core/Fusee.Engine.Core.csproj
@@ -6,6 +6,7 @@
 		<IsPackable>true</IsPackable>
 		<Description>Fusee Engine Core</Description>
 		<Nullable>enable</Nullable>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
