--- a/src/Engine/GUI/Fusee.Engine.Gui.csproj
+++ b/src/Engine/GUI/Fusee.Engine.Gui.csproj
@@ -6,6 +6,7 @@
 
 		<IsPackable>true</IsPackable>
 		<Description>Fusee Engine GUI</Description>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
