--- a/src/PointCloud/Potree/Fusee.PointCloud.Potree.csproj
+++ b/src/PointCloud/Potree/Fusee.PointCloud.Potree.csproj
@@ -4,6 +4,7 @@
 		<TargetFrameworks>netstandard2.1;net7.0</TargetFrameworks>
 		<DocumentationFile>$(OutputPath)\$(RootNamespace).xml</DocumentationFile>
 		<Nullable>enable</Nullable>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
