--- a/src/Serialization/Fusee.Serialization.csproj
+++ b/src/Serialization/Fusee.Serialization.csproj
@@ -6,6 +6,7 @@
 
 		<IsPackable>true</IsPackable>
 		<Description>Fusee Serialization</Description>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
