--- a/src/Structures/Fusee.Structures.csproj
+++ b/src/Structures/Fusee.Structures.csproj
@@ -6,6 +6,7 @@
 
 		<IsPackable>true</IsPackable>
 		<Description>Fusee Structures</Description>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
