--- a/src/Xirkit/Fusee.Xirkit.csproj
+++ b/src/Xirkit/Fusee.Xirkit.csproj
@@ -6,6 +6,7 @@
 
 		<IsPackable>true</IsPackable>
 		<Description>Fusee Xirkit</Description>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
